--- a/_layout/_footer.html
+++ b/_layout/_footer.html
@@ -1,5 +1,5 @@
 <footer id="footer" role="contentinfo">
     <section id="copyright" class="layout__section">
-        <p hill-text="small-3x center">&copy; 2018 makuyuni e.V. &bull; <a class="typography--link" href="/impressum.html">Impressum</a></p>
+        <p hill-text="small-3x center">&copy; 2018 Makuyuni e.V. &bull; <a class="typography--link" href="/impressum.html">Impressum</a></p>
     </section>
 </footer>
