--- a/_layout/_head.html
+++ b/_layout/_head.html
@@ -1,18 +1,18 @@
 <meta charset="utf-8">
 
-<title>Makuyuni e.V. &middot; @@title @@if(title !== ''){&mdash;}Education is the key to Happiness &mdash; proudly made Cologne for Tanzania</title>
+<title>Makuyuni e.V. &middot; @@title @@if(title !== ''){&mdash;}Education is the key to Happiness &mdash; with heart from Cologne to Makuyuni</title>
 
 <link rel="dns-prefetch" href="https://makuyuni.org">
 <link rel="dns-prefetch" href="https://makuyuni-org.firebaseapp.com/">
 <link rel="shortcut icon" href="/assets/images/general/favicon.png">
 
-<meta name="description" content="Education is the key to Happiness &mdash; proudly made Cologne for Tanzania">
+<meta name="description" content="Education is the key to Happiness &mdash; with heart from Cologne to Makuyuni">
 <meta name="author" content="Andreas Klein">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta property="og:url" content="@@url" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Makuyuni e.V. &middot;@@title @@if(title !== ''){&mdash;}Education is the key to Happiness &mdash; proudly made Cologne for Tanzania">
-<meta property="og:description" content="Education is the key to Happiness &mdash; proudly made Cologne for Tanzania">
+<meta property="og:title" content="Makuyuni e.V. &middot;@@title @@if(title !== ''){&mdash;}Education is the key to Happiness &mdash; with heart from Cologne to Makuyuni">
+<meta property="og:description" content="Education is the key to Happiness &mdash; with heart from Cologne to Makuyuni">
 <meta property="og:image" content="">
 
 <!-- Author -->
