Add new post 13.07.2018, add "Vereinssatzung"

--- a/_layout/_footer.html
+++ b/_layout/_footer.html
@@ -1,5 +1,7 @@
 <footer id="footer" role="contentinfo">
     <section id="copyright" class="layout__section">
-        <p hill-text="small-3x center">&copy; 2018 Makuyuni e.V. &bull; <a class="typography--link" href="/impressum.html">Impressum</a></p>
+        <p hill-text="small-3x center">Build with ❤️ in Cologne for Makuyuni, Tanzania</p>
+        <p hill-text="small-3x center" iii-color="grey">&copy; 2018 makuyuni.org project &bull; <a class="typography--link" iii-color="grey" href="/impressum.html">Rechtliches</a>
+        </p>
     </section>
 </footer>
