--- a/_style/_figures.scss
+++ b/_style/_figures.scss
@@ -11,6 +11,8 @@ img {
  * Figures & Images
  */
 [class*="figure"] {
+    border-radius: 0.1rem;
+
     figcaption {
         font-size: 0.75rem;
         padding: 0.5rem 0;
