--- a/_style/_typography.scss
+++ b/_style/_typography.scss
@@ -114,8 +114,12 @@ h3 {
  * Other Elements
  */
 hr {
+    @include clearfix;
+
     border: none;
-    border-top: 1px solid get-color(grey-light);
+    border-top: 1px dashed get-color(grey);
+    padding-top: 3rem;
+    margin-top: 4rem;
 }
 
 /**
