--- a/_style/_buttons.scss
+++ b/_style/_buttons.scss
@@ -2,24 +2,28 @@
  * Buttons
  * (Dam, I hate button styling :)
  */
-.button {
+.button,
+.button--secondary {
     position: relative;
     display: inline-block;
 
     padding: .8em 1em .75em;
     border-radius: 1px;
-    border: 0;
 
-    font-weight: bold;
+    -webkit-font-smoothing: antialiased;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.button {
+    border: 0;
+    transition: transform .3s;
+
     letter-spacing: .15rem;
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
     white-space: nowrap;
-
-    transition: transform .3s;
-    -webkit-font-smoothing: antialiased;
-    -webkit-tap-highlight-color: transparent;
+    font-weight: bold;
 
     &:active {
         outline: 0;
@@ -37,6 +41,17 @@
         cursor: not-allowed;
         color: get-color(white);
         background-color: get-color(grey-light);
+        transform: none;
+    }
+}
+
+.button--secondary {
+    border: 1px solid;
+    background-color: #fff;
+    font-weight: 400;
+
+    &:hover,
+    &:focus {
         transform: none;
     }
 }
