--- a/_style/_typography.scss
+++ b/_style/_typography.scss
@@ -40,7 +40,7 @@ h3 {
    font-weight: map-get($type--body, regular);
 }
 
-.article h1,
+article h1,
 .typography--type-1 {
     font-size: 4rem;
     margin-bottom: 1rem;
@@ -51,7 +51,7 @@ h3 {
     }
 }
 
-.article h2,
+article h2,
 .typography--type-2 {
     font-size: 2.5rem;
     margin-bottom: 2rem;
@@ -64,7 +64,7 @@ h3 {
     }
 }
 
-.article h3,
+article h3,
 .typography--type-3 {
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
